--- a/app/src/main/res/layout/activity_balloon.xml
+++ b/app/src/main/res/layout/activity_balloon.xml
@@ -6,53 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".BalloonActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <include
         android:id="@+id/lay_time"
-        android:orientation="horizontal"
-<<<<<<< HEAD
-=======
-        app:layout_constraintTop_toBottomOf="@id/pg_bar"
-        android:id="@+id/lay_quest_balloon"
-        android:gravity="center_horizontal"
->>>>>>> origin/master
-        tools:ignore="MissingConstraints">
-
-        <ProgressBar
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:id="@+id/pg_bar"
-            android:layout_marginLeft="10dp"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            tools:ignore="MissingConstraints" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0초"
-            android:textSize="25dp"
-            android:id="@+id/tv_time"
-            android:layout_margin="15dp"
-            android:layout_toRightOf="@+id/pg_bar"
-            tools:ignore="MissingConstraints" />
-    </RelativeLayout>
+        layout="@layout/view_lay_time"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-<<<<<<< HEAD
         android:orientation="vertical"
         android:id="@+id/lay_menu"
         app:layout_constraintTop_toBottomOf="@id/lay_time"
         tools:ignore="MissingConstraints">
-=======
-        android:text="PAUSE"
-        android:id="@+id/btn_pause"
-        android:enabled="false"
-        app:layout_constraintTop_toBottomOf="@id/lay_quest_balloon"
-        android:gravity="center_horizontal"
-        tools:ignore="MissingConstraints" />
->>>>>>> origin/master
 
         <Button
             android:layout_width="wrap_content"
@@ -92,16 +56,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-<<<<<<< HEAD
-        android:gravity="center"
-        android:id="@+id/lay_balloon_quest"
         app:layout_constraintTop_toBottomOf="@+id/tv_score_balloon"
-=======
         android:gravity="center_horizontal"
-        android:id="@+id/tv_balloon_quest"
-        app:layout_constraintTop_toBottomOf="@+id/lay_quest_balloon"
+        android:id="@+id/lay_balloon_quest"
         app:layout_constraintRight_toRightOf="parent"
->>>>>>> origin/master
         tools:ignore="MissingConstraints">
 
         <TextView
@@ -132,62 +90,11 @@
         android:orientation="vertical"
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/lay_balloon_quest"
-
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
         tools:listitem="@layout/recycler_balloon" />
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/lay_bottom_buttons"
-        tools:ignore="MissingConstraints">
-
-        <RadioGroup
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:orientation="horizontal"
-            android:id="@+id/radioGroup"
-            tools:ignore="MissingConstraints">
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/sec_10"
-                android:text="10초"/>
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/sec_20"
-                android:text="20초"/>
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/sec_30"
-                android:text="30초"/>
-
-        </RadioGroup>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:id="@+id/btn_start"
-            android:text="START"
-            android:enabled="false"
-            android:layout_toRightOf="@+id/radioGroup"
-            android:layout_marginLeft="30dp"
-            tools:ignore="MissingConstraints" />
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:id="@+id/btn_reset"
-            android:text="RESET"
-            android:layout_toRightOf="@+id/btn_start"
-            />
-    </RelativeLayout>
-
+    <include android:id="@+id/lay_bottom"
+        layout="@layout/view_lay_bottom" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
