--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,12 @@
             android:id="@+id/goto_conntest"
             android:text="Conn Test"
             tools:ignore="MissingConstraints" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/goto_wam"
+            android:text="Whack a Mole"
+            tools:ignore="MissingConstraints" />
 
     </LinearLayout>
 
