--- a/app/src/main/res/layout/activity_balloon.xml
+++ b/app/src/main/res/layout/activity_balloon.xml
@@ -89,6 +89,7 @@
         android:layout_marginTop="68dp"
         android:orientation="vertical"
         android:visibility="gone"
+        android:overScrollMode="never"
         app:layout_constraintTop_toBottomOf="@+id/lay_balloon_quest"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
