--- a/app/src/main/res/layout/activity_math.xml
+++ b/app/src/main/res/layout/activity_math.xml
@@ -119,6 +119,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/rv_math"
+        android:overScrollMode="never"
         app:layout_constraintTop_toBottomOf="@+id/tv_history"
         tools:listitem="@layout/recycler_math"
         />
