--- a/app/src/main/res/layout/activity_whack_a_mole.xml
+++ b/app/src/main/res/layout/activity_whack_a_mole.xml
@@ -56,6 +56,7 @@
         android:id="@+id/rv_whack_a_mole"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:overScrollMode="never"
         android:orientation="vertical"
         android:visibility="invisible"
         app:layout_constraintTop_toBottomOf="@+id/tv_score_wam"
