--- a/app/src/main/res/layout/activity_math.xml
+++ b/app/src/main/res/layout/activity_math.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/lay_menu"
-        app:layout_constraintTop_toBottomOf="@id/lay_time"
+        android:layout_below="@+id/lay_time"
         tools:ignore="MissingConstraints">
 
         <Button
@@ -47,7 +47,7 @@
         android:textSize="40dp"
         android:text="SCORE: 0"
         android:id="@+id/tv_score_math"
-        app:layout_constraintTop_toBottomOf="@+id/lay_menu"
+        android:layout_below="@+id/lay_time"
         android:gravity="center"
         tools:ignore="MissingConstraints" />
 
@@ -55,53 +55,51 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lay_quest_math"
-        app:layout_constraintTop_toBottomOf="@+id/tv_score_math"
+        android:layout_below="@+id/lay_menu"
         android:gravity="center"
         android:orientation="horizontal"
-        tools:ignore="MissingConstraints">
+        android:layout_marginTop="20dp" >
 
         <TextView
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:id="@+id/tv_num1"
             android:text="3"
-            android:layout_marginRight="20dp"
             android:gravity="center"
-            android:textSize="40dp"/>
+            android:autoSizeTextType="uniform"
+            />
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:id="@+id/tv_op1"
             android:text="+"
-            android:layout_marginRight="20dp"
             android:layout_toRightOf="@+id/tv_num1"
-            android:textSize="40dp"/>
+            android:gravity="center"
+            android:autoSizeTextType="uniform" />
         <TextView
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:id="@+id/tv_num2"
             android:text="4"
-            android:layout_marginRight="20dp"
             android:layout_toRightOf="@id/tv_op1"
             android:gravity="center"
-            android:textSize="40dp"/>
+            android:autoSizeTextType="uniform" />
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:id="@+id/tv_op2"
             android:text="*"
-            android:layout_marginRight="20dp"
             android:layout_toRightOf="@+id/tv_num2"
-            android:textSize="40dp"/>
+            android:gravity="center"
+            android:autoSizeTextType="uniform" />
         <TextView
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:id="@+id/tv_num3"
             android:text="5"
-            android:layout_marginRight="20dp"
             android:layout_toRightOf="@+id/tv_op2"
             android:gravity="center"
-            android:textSize="40dp"/>
+            android:autoSizeTextType="uniform" />
 
     </RelativeLayout>
 
@@ -111,7 +109,8 @@
         android:id="@+id/tv_history"
         android:textSize="20dp"
         android:gravity="right"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/lay_quest_math"
         android:text=""
         app:layout_constraintTop_toBottomOf="@+id/lay_quest_math"/>
 
@@ -120,11 +119,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/rv_math"
         android:overScrollMode="never"
-        app:layout_constraintTop_toBottomOf="@+id/tv_history"
+        android:layout_below="@+id/tv_history"
         tools:listitem="@layout/recycler_math"
         />
 
     <include android:id="@+id/lay_bottom"
         layout="@layout/view_lay_bottom" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
