--- a/app/src/main/res/layout/activity_memory_card_game.xml
+++ b/app/src/main/res/layout/activity_memory_card_game.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/lay_menu"
-        app:layout_constraintTop_toBottomOf="@id/lay_time"
+        android:layout_below="@+id/lay_time"
         tools:ignore="MissingConstraints">
 
         <Button
@@ -49,8 +49,7 @@
         android:id="@+id/tv_score_memory"
         android:layout_margin="15dp"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/lay_menu"
-        tools:ignore="MissingConstraints" />
+        android:layout_below="@+id/lay_time" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_memory_card_game"
@@ -58,11 +57,11 @@
         android:layout_height="wrap_content"
         android:overScrollMode="never"
         android:visibility="invisible"
-        app:layout_constraintTop_toBottomOf="@+id/tv_score_memory"
-        tools:ignore="MissingConstraints"
+        android:layout_below="@+id/lay_menu"
+        android:layout_centerHorizontal="true"
         tools:listitem="@layout/recycler_memory" />
 
     <include android:id="@+id/lay_bottom"
         layout="@layout/view_lay_bottom" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
