--- a/app/src/main/res/layout/activity_whack_a_mole.xml
+++ b/app/src/main/res/layout/activity_whack_a_mole.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,8 +15,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/lay_menu"
-        app:layout_constraintTop_toBottomOf="@id/lay_time"
-        tools:ignore="MissingConstraints">
+        android:layout_below="@+id/lay_time" >
 
         <Button
             android:layout_width="wrap_content"
@@ -49,8 +48,7 @@
         android:id="@+id/tv_score_wam"
         android:layout_margin="15dp"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/lay_menu"
-        tools:ignore="MissingConstraints" />
+        android:layout_below="@+id/lay_time"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_whack_a_mole"
@@ -59,12 +57,12 @@
         android:overScrollMode="never"
         android:orientation="vertical"
         android:visibility="invisible"
-        app:layout_constraintTop_toBottomOf="@+id/tv_score_wam"
-        tools:ignore="MissingConstraints"
+        android:layout_below="@+id/lay_menu"
         android:background="@drawable/textview_edge"
+        android:layout_marginTop="20dp"
         tools:listitem="@layout/recycler_whack_a_mole" />
 
     <include android:id="@+id/lay_bottom"
         layout="@layout/view_lay_bottom" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
