--- a/app/src/main/res/layout/recycler_findnum.xml
+++ b/app/src/main/res/layout/recycler_findnum.xml
@@ -9,7 +9,7 @@
     <Button
         android:id="@+id/btn_rv_number"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
