--- a/app/src/main/res/layout/recycler_memory.xml
+++ b/app/src/main/res/layout/recycler_memory.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,11 +7,11 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="80dp"
-        android:layout_height="110dp"
-        android:scaleType="centerCrop"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:scaleType="fitCenter"
         android:id="@+id/img_rv_memory"
-        android:src="@drawable/card_back"
-        tools:ignore="MissingConstraints" />
+        android:layout_centerInParent="true"
+        android:src="@drawable/card_back" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
