--- a/app/src/main/res/layout/view_lay_bottom.xml
+++ b/app/src/main/res/layout/view_lay_bottom.xml
@@ -19,22 +19,29 @@
             android:layout_weight="1">
 
             <RadioButton
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/sec_10"
-                android:layout_margin="5dp"
-                android:text="10초"/>
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="15dp"
+                android:text="10초"
+                />
             <RadioButton
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/sec_20"
-                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="15dp"
                 android:text="20초"/>
             <RadioButton
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/sec_30"
-                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="15dp"
                 android:text="30초"/>
 
         </RadioGroup>
