--- a/app/src/main/res/layout/activity_left_right.xml
+++ b/app/src/main/res/layout/activity_left_right.xml
@@ -36,9 +36,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/btn_pause"
-            android:text="_____"
+            android:text="최고기록: ___"
             android:id="@+id/tv_best_score"
-            android:textSize="30dp"/>
+            android:textSize="16dp"/>
     </RelativeLayout>
 
     <TextView
@@ -81,8 +81,5 @@
             android:id="@+id/btn_right"
             android:text="RIGHT"/>
     </RelativeLayout>
-
-    <include android:id="@+id/lay_bottom"
-        layout="@layout/view_lay_bottom" />
 
 </RelativeLayout>
