--- a/app/src/main/res/layout/view_lay_time.xml
+++ b/app/src/main/res/layout/view_lay_time.xml
@@ -2,32 +2,37 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="72dp"
+    android:layout_marginTop="50dp"
+    android:id="@+id/lay_time">
 
-    <LinearLayout
+    <ProgressBar
+        android:id="@+id/pg_bar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/lay_time"
-        android:orientation="horizontal"
-        tools:ignore="MissingConstraints">
+        android:layout_height="18dp"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="-20dp"
+        android:layout_toRightOf="@+id/pg_img"
+        android:progressDrawable="@drawable/custom_progressbar"
+        tools:ignore="MissingConstraints" />
 
-        <ProgressBar
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:id="@+id/pg_bar"
-            android:layout_marginLeft="10dp"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            tools:ignore="MissingConstraints" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0초"
-            android:textSize="25dp"
-            android:id="@+id/tv_time"
-            android:layout_margin="15dp"
-            android:layout_toRightOf="@+id/pg_bar"
-            tools:ignore="MissingConstraints" />
-    </LinearLayout>
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/pg_timer_img"
+        android:layout_centerVertical="true"
+        android:id="@+id/pg_img" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="29dp"
+        android:text="0초"
+        android:textSize="24dp"
+        android:id="@+id/tv_time"
+        android:layout_above="@+id/pg_bar"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="2dp"
+        android:layout_marginRight="2dp"
+        />
 
 </RelativeLayout>
