--- a/app/src/main/res/layout/activity_find_number.xml
+++ b/app/src/main/res/layout/activity_find_number.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,40 +7,43 @@
     android:layout_height="match_parent"
     tools:context=".FindNumberActivity">
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lay_menu"
+        >
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_home"
+            android:src="@drawable/home_button"/>
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_pause"
+            android:src="@drawable/pause_button"
+            android:layout_alignParentRight="true"
+            android:enabled="false" />
+    </RelativeLayout>
+
     <include
         android:id="@+id/lay_time"
-        layout="@layout/view_lay_time"/>
-
-    <RelativeLayout
+        layout="@layout/view_lay_time"
+        android:layout_below="@+id/lay_menu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/lay_menu"
-        app:layout_constraintTop_toBottomOf="@id/lay_time"
-        tools:ignore="MissingConstraints">
+        android:layout_height="72dp"
+        android:layout_marginTop="43dp"
+        />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="HOME"
-            android:id="@+id/btn_home"
-            tools:ignore="MissingConstraints" />
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="PAUSE"
-            android:id="@+id/btn_pause"
-            android:enabled="false"
-            android:layout_below="@+id/btn_home"
-            tools:ignore="MissingConstraints" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/btn_pause"
-            android:text="최고기록: ___"
-            android:id="@+id/tv_best_score"
-            android:textSize="16dp"/>
-    </RelativeLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="최고기록: ___"
+        android:id="@+id/tv_best_score"
+        android:layout_below="@id/lay_time"
+        android:textSize="16dp"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -50,9 +53,7 @@
         android:id="@+id/tv_score_findnum"
         android:layout_margin="15dp"
         android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="@+id/lay_menu"
-        tools:ignore="MissingConstraints" />
-
+        android:layout_below="@+id/tv_best_score" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_findnum"
@@ -60,11 +61,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
         android:orientation="vertical"
-        android:visibility="gone"
+        android:visibility="invisible"
         android:overScrollMode="never"
-        app:layout_constraintTop_toBottomOf="@+id/lay_menu"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
+        android:layout_below="@+id/tv_best_score"
         tools:listitem="@layout/recycler_findnum" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
