--- a/app/src/main/res/layout/activity_left_right.xml
+++ b/app/src/main/res/layout/activity_left_right.xml
@@ -6,40 +6,43 @@
     android:layout_height="match_parent"
     tools:context=".LeftRightActivity">
 
-    <include
-        android:id="@+id/lay_time"
-        layout="@layout/view_lay_time"/>
-
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:id="@+id/lay_menu"
-        android:layout_below="@id/lay_time"
-        tools:ignore="MissingConstraints">
+        >
 
-        <Button
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="HOME"
             android:id="@+id/btn_home"
-            tools:ignore="MissingConstraints" />
-        <Button
+            android:src="@drawable/home_button"/>
+
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="PAUSE"
             android:id="@+id/btn_pause"
-            android:enabled="false"
-            android:layout_below="@+id/btn_home"
-            tools:ignore="MissingConstraints" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/btn_pause"
-            android:text="최고기록: ___"
-            android:id="@+id/tv_best_score"
-            android:textSize="16dp"/>
+            android:src="@drawable/pause_button"
+            android:layout_alignParentRight="true"
+            android:enabled="false" />
     </RelativeLayout>
+
+    <include
+        android:id="@+id/lay_time"
+        layout="@layout/view_lay_time"
+        android:layout_below="@+id/lay_menu"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:layout_marginTop="43dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="최고기록: ___"
+        android:id="@+id/tv_best_score"
+        android:layout_below="@id/lay_time"
+        android:textSize="16dp"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -47,16 +50,16 @@
         android:textSize="40dp"
         android:text="SCORE: 0"
         android:id="@+id/tv_score_leftright"
+        android:layout_margin="15dp"
         android:gravity="center"
-        android:layout_below="@+id/lay_time"
-        tools:ignore="MissingConstraints" />
+        android:layout_below="@+id/tv_best_score" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginBottom="50dp"
-        android:layout_below="@+id/lay_menu">
+        android:layout_below="@+id/tv_score_leftright">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_leftright"
